Successfully linked email and LinkedIn page

--- a/HW6_FisherFrye/HW6_Resume1.html
+++ b/HW6_FisherFrye/HW6_Resume1.html
@@ -8,10 +8,15 @@
 
 <body>
     <h1 style="color:#000000;font-size:36px;font-weight:normal;font-family:Arial;text-align:center;">Alexandra N. Fisher</h1>
+    <p style="color:#000000;font-size:16px;font-weight:normal;font-family:Arial;text-align:center;">
+    <span style="color:#000000;font-size:16px;font-weight:normal;font-family:Arial;text-align:center;">214-415-2728</span>
+    <span style="color:#000000;font-size:16px;font-weight:normal;font-family:Arial;text-align:center;"> | </span>
+    <a href="mailto:alexandranfisher@gmail.com"><span style="font-size:16px;font-weight:normal;font-family:Arial;text-align:center;">alexandranfisher@gmail.com</span></a>
+    <span style="color:#000000;font-size:16px;font-weight:normal;font-family:Arial;text-align:center;"> | </span>
+    <a href="http://www.linkedin.com/in/alexandranfisher"><span style="font-size:16px;font-weight:normal;font-family:Arial;text-align:center;">linkedin.com/in/alexandranfisher</span></a>
     <hr>
-    <p style="color:#000000;font-size:16px;font-weight:normal;font-family:Arial;text-align:center;">214-415-2728 | alexandranfisher@gmail.com | linkedin.com/in/alexandranfisher</p>
-    <hr>
-    <p style="color:#ed0105;font-size:20px;font-weight:bold;font-family:Arial;text-align:left;"> Creative, organized, and data-driven sales and marketing professional in Austin, Texas.</p>
+    <p style="color:#ed0105;font-size:20px;font-weight:bold;font-family:Arial;text-align:left;"> 
+    Creative, organized, and data-driven sales and marketing professional in Austin, Texas.</p>
     <a href="https://pixabay.com/p-1187460/?no_redirect"> 
     <img src="https://cdn.pixabay.com/photo/2016/02/08/19/52/button-1187460_960_720.png" 
     alt="button-1187460_960_720" width="250" height=""></a><br>
