--- a/HW6_FisherFrye/HW6_Resume1.html
+++ b/HW6_FisherFrye/HW6_Resume1.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="Resume.css">
-<title> My First Webpage </title>
+<title> Alexandra Fisher's Resume </title>
 </head>
 
 <body>
