intro relative path

--- a/HW6_FisherFrye/HW6_IntroPage.html
+++ b/HW6_FisherFrye/HW6_IntroPage.html
@@ -13,8 +13,8 @@
     by Alex Frye & Alexandra Fisher</p>
     <p class = "ContactInfo"> 
         <a href="https://github.com/amfrye777/MSDS6391_VISII_Projects"> GitHub Repository</a> |
-		<a href="file:///Users/alexnfisher14/Dropbox/SMU%20_%20ALEX/Documents/MSDS6391_VISII_Projects.git/HW6_FisherFrye/HW6_Resume2.html">Alex Frye Resume</a> | 
-		<a href="file:///Users/alexnfisher14/Dropbox/SMU%20_%20ALEX/Documents/MSDS6391_VISII_Projects.git/HW6_FisherFrye/HW6_Resume1.html">Alexandra Fisher Resume</a>
+		<a href="HW6_Resume2.html">Alex Frye Resume</a> | 
+		<a href="HW6_Resume1.html">Alexandra Fisher Resume</a>
 	</p>    
 	<hr>
     <p class = "ExpText" align=center>Last Updated: October 18, 2017</p>
