--- a/HW6_FisherFrye/HW6_Resume2.html
+++ b/HW6_FisherFrye/HW6_Resume2.html
@@ -22,68 +22,74 @@
     <p class = "ExpTitle">Database Development Lead, <span class = "ExpDates">October 2017 to Present</span></p>
     <p class = "ExpTitle">Database Developer III, <span class = "ExpDates">May 2016 to October 2017</span></p>
     
-	<p><a href="http://www.amerisourcebergen.com/abcnew/"><img src="pictures.fld/AmerisourceBergen.jpg" alt="ABClogo" align=left width="" height="45" vspace=0 hspace=0></a></p></br></br></br>
+	<p><a href="http://www.amerisourcebergen.com/abcnew/"><img src="pictures.fld/AmerisourceBergen.jpg" alt="ABClogo" align=left width="" height="45" vspace=0 hspace=0></a></p></br></br>
+	
+	<ul class = "ExpText">
+		<li>Job Description Details Pending...</li>
+    </ul>
 	
 	<p class = "ExpTitle">Business Analyst II, <span class = "ExpDates">September 2015 to May 2016</span></p>
     <p class = "ExpTitle">Business Analyst I, <span class = "ExpDates">June 2014 to September 2015</span></p>
 
-	<p><a href="http://www.amerisourcebergen.com/abcnew/"><img src="pictures.fld/AmerisourceBergen.jpg" alt="ABClogo" align=left width="" height="45" vspace=0 hspace=0></a></p></br></br></br>
+	<p><a href="http://www.amerisourcebergen.com/abcnew/"><img src="pictures.fld/AmerisourceBergen.jpg" alt="ABClogo" align=left width="" height="45" vspace=0 hspace=0></a></p></br></br>
 
-    <p style="color:#000000;font-size:10.5pt;line-height:120%;font-weight:normal;font-family:Arial;text-align:left;"><u>Revenue Management - Financial Planning & Analysis</u>
-    <ul style="color:#000000;font-size:10.5pt;line-height:120%;font-weight:normal;font-family:Arial;text-align:left;">•	Created Business & Functional Requirement documentation to support various revenue applications which 
-    enabled business users to manage Rebate Incentive programs, Pricing analytics, & ultimately arrive at transactional-level profitability metrics</ul>
-    <ul style="color:#000000;font-size:10.5pt;line-height:120%;font-weight:normal;font-family:Arial;text-align:left;">•	Facilitated extensive user training to enable proper usage of Revenue applications</ul>
-    <ul style="color:#000000;font-size:10.5pt;line-height:120%;font-weight:normal;font-family:Arial;text-align:left;">•	Facilitated extensive user training to enable proper usage of Revenue applicationso	Facilitated 
-    a requirement workshop to provide implementation guidance & gap analysis for new business unit to integrate into rebate application </ul>
-    <ul style="color:#000000;font-size:10.5pt;line-height:120%;font-weight:normal;font-family:Arial;text-align:left;">•	Support business needs through detailed data analytics & reporting initiatives</ul>
-    </P>
-    <p style="color:#000000;font-size:10.5pt;line-height:120%;font-weight:normal;font-family:Arial;text-align:left;"><u>Secure Supply Chain (Drug Serialization)</u>
-    <ul style="color:#000000;font-size:10.5pt;line-height:120%;font-weight:normal;font-family:Arial;text-align:left;">•	Supported the Pilot program for implementing new processes to remain compliant due to the Drug Supply Chain Security Act (DSCSA).</ul>
-    <ul style="color:#000000;font-size:10.5pt;line-height:120%;font-weight:normal;font-family:Arial;text-align:left;">•	Facilitated requirement workshops to identify as is & to be processes in the distribution centers participating in Pilot Programs</ul>
-    </P>
-
-    <p style="color:#000000;font-size:11.5pt;line-height:100%;font-weight:bold;font-family:Arial;text-align:left;">Client Services Associate Team Lead</p>
+    <p class = "GenText"><u>Revenue Management - Financial Planning & Analysis</u></p>
+    <ul class = "ExpText">
+		<li>Created Business & Functional Requirement documentation to support various revenue applications which 
+    enabled business users to manage Rebate Incentive programs, Pricing analytics, & ultimately arrive at transactional-level profitability metrics</li>
+		<li>Facilitated extensive user training to enable proper usage of Revenue applications</li>
+		<li>Facilitated extensive user training to enable proper usage of Revenue applicationso	Facilitated 
+    a requirement workshop to provide implementation guidance & gap analysis for new business unit to integrate into rebate application </li>
+		<li>Support business needs through detailed data analytics & reporting initiatives</li>
+    </ul>
 	
-    <p style="color:#000000;font-size:11.5pt;line-height:100%;font-weight:normal;font-family:Arial;text-align:left;"><i>January 2014 to June 2014</i></p>
-	<p><a href="https://www.pwc.com/us/en/mlp.html"><img src="pictures.fld/pwc.jpg" alt="PWClogo" align=left width="" height="45" vspace=0 hspace=0></a></p></br></br></br>	
+    <p class = "GenText"><u>Secure Supply Chain (Drug Serialization)</u></p>
+    <ul class = "ExpText">
+		<li>Supported the Pilot program for implementing new processes to remain compliant due to the Drug Supply Chain Security Act (DSCSA).</il>
+		<li>Facilitated requirement workshops to identify as is & to be processes in the distribution centers participating in Pilot Programs</li>
+    </ul>
 	
-    <p style="color:#000000;font-size:10.5pt;line-height:120%;font-weight:normal;font-family:Arial;text-align:left;">
-    <ul style="color:#000000;font-size:10.5pt;line-height:120%;font-weight:normal;font-family:Arial;text-align:left;">•	Primary contact for 10 clients (partnerships) and responsible for making sure investor ownership & K-1 Tax Forms are reported and mailed out correctly.</ul>
-    <ul style="color:#000000;font-size:10.5pt;line-height:120%;font-weight:normal;font-family:Arial;text-align:left;">•	Created various SQL queries/reports in order to help clients cut costs, reduce call center backlog, and provide transparency to clients regarding their investor data.</ul>
-    <ul style="color:#000000;font-size:10.5pt;line-height:120%;font-weight:normal;font-family:Arial;text-align:left;">•	Took initiatives to standardize best practices for e-file Test Plans & Summary Documentation.</ul>
-    </P>
-    <p style="color:#000000;font-size:11.5pt;line-height:100%;font-weight:bold;font-family:Arial;text-align:left;">IT Intern - Business Analyst</p>
-    <p style="color:#000000;font-size:11.5pt;line-height:100%;font-weight:normal;font-family:Arial;text-align:left;"><i>May 2013 to August 2013</i></p>
-	<p><a href="http://www.amerisourcebergen.com/abcnew/"><img src="pictures.fld/AmerisourceBergen.jpg" alt="ABClogo" align=left width="" height="45" vspace=0 hspace=0></a></p></br></br></br>
+	</br>
+	
+    <p class = "ExpTitle">Client Services Associate Team Lead, <span class = "ExpDates">January 2014 to June 2014</span></p>
+	<p><a href="https://www.pwc.com/us/en/mlp.html"><img src="pictures.fld/pwc.jpg" alt="PWClogo" align=left width="" height="45" vspace=0 hspace=0></a></p></br></br>
+	
+    <ul class = "ExpText">
+		<li>Primary contact for 10 clients (partnerships) and responsible for making sure investor ownership & K-1 Tax Forms are reported and mailed out correctly.</li>
+		<li>Created various SQL queries/reports in order to help clients cut costs, reduce call center backlog, and provide transparency to clients regarding their investor data.</li>
+		<li>Took initiatives to standardize best practices for e-file Test Plans & Summary Documentation.</li>
+    </ul>
+	
+	</br>
+	
+    <p class = "ExpTitle">IT Intern - Business Analyst, <span>May 2013 to August 2013</span></p>
+	
+	<p><a href="http://www.amerisourcebergen.com/abcnew/"><img src="pictures.fld/AmerisourceBergen.jpg" alt="ABClogo" align=left width="" height="45" vspace=0 hspace=0></a></p></br></br>
 
-    <p style="color:#000000;font-size:9.5pt;line-height:120%;font-weight:normal;font-family:Arial;text-align:left;">
-    <ul style="color:#000000;font-size:10.5pt;line-height:120%;font-weight:normal;font-family:Arial;text-align:left;">•	Elicited information and created process flow diagrams to document financial processes, resulting in process improvements</ul>
-    <ul style="color:#000000;font-size:10.5pt;line-height:120%;font-weight:normal;font-family:Arial;text-align:left;">•	Created a decision analysis document to aide business & internal IT in selecting a project development approach</ul>
-    <ul style="color:#000000;font-size:10.5pt;line-height:120%;font-weight:normal;font-family:Arial;text-align:left;">•	Facilitated Business Functional Requirements Document (BFRD)/Process documentation reviews</ul>
-    </P>
+	<ul class = "ExpText">
+		<li>Elicited information and created process flow diagrams to document financial processes, resulting in process improvements</li>
+		<li>Created a decision analysis document to aide business & internal IT in selecting a project development approach</li>
+		<li>Facilitated Business Functional Requirements Document (BFRD)/Process documentation reviews</li>
+    </ul>
 
-    <h5 style="color:#C00000;font-size:20px;font-weight:bold;font-family:Arial;text-align:left;">EDUCATION</h5>
-    <p><a><img src="pictures.fld/mustang.png" alt="mustang" align=left width="65" height="" vspace=10 hspace=10></a><br></p>
-    <p style="color:#000000;font-size:10.5pt;line-height:200%;font-weight:bold;font-family:Arial;text-align:left;">
-        <span style="color:#000000;font-size:10.5ptt;line-height:200%;font-weight:bold;font-family:Arial;text-align:left;">Master of Science (M.S.)</span></b>
-        <span style='color:#000000;font-size:10.5pt;line-height:200%;font-weight:normal;font-family:Arial;text-align:left;"'>in Data Science (MSDS Program)</span><br>
-        <span style="color:#000000;font-size:10.5pt;line-height:200%;font-weight:normal;font-family:Arial;text-align:left;">Southern Methodist University</span></b>
-        <span style='color:#000000;font-size:10.5pt;line-height:200%;font-weight:normal;font-family:Arial;text-align:left;"'>, Dallas, TX – May 2015 to December 2017</span><br>
+    <p class = "SectionHdr">EDUCATION</p>
+	
+    <p><a><img src="pictures.fld/mustang.png" alt="mustang" align=left width="65" height="" vspace=10 hspace=10></a></p></br></br>
+	<p class = "GenText"><b>Master of Science (M.S.)</b> in Data Science (MSDS Program)</br>
+        Southern Methodist University, Dallas, TX – May 2015 to December 2017</br>
     </p>
-    <p style="color:#000000;font-size:10.5pt;line-height:200%;font-weight:bold;font-family:Arial;text-align:left;">
-        <span style="color:#000000;font-size:10.5pt;line-height:200%;font-weight:bold;font-family:Arial;text-align:left;">ITIL Foundation Certificate in IT Service Management (ITILv3)</span><br>
-        <span style="color:#000000;font-size:10.5pt;line-height:200%;font-weight:normal;font-family:Arial;text-align:left;">PEOPLECERT, License GR750156411AF</span></b>
-        <span style='color:#000000;font-size:10.5pt;line-height:200%;font-weight:normal;font-family:Arial;text-align:left;"'> – February 2015</span><br>   
+	
+	<p><a><img src="pictures.fld/PeopleCert_ITIL.jpg" alt="ITIL" align=left width="65" height="" vspace=10 hspace=10></a></p>
+    <p class = "GenText"><b>ITIL Foundation Certificate in IT Service Management (ITILv3)</br>
+        PEOPLECERT, License GR750156411AF– February 2015</br>   
     </p>
+	
     <p><a><img src="pictures.fld/texastech.jpeg" alt="texastech" align=left width="75" height="" vspace=10 hspace=10></a><br></p>
-    <p style="color:#000000;font-size:10.5pt;line-height:200%;font-weight:bold;font-family:Arial;text-align:left;">
-        <span style="color:#000000;font-size:10.5pt;line-height:200%;font-weight:bold;font-family:Arial;text-align:left;">Bachelor of Business Administration,</span></b>
-        <span style='color:#000000;font-size:10.5pt;line-height:200%;font-weight:normal;font-family:Arial;text-align:left;"'> Management Information Systems (MIS)</span><br>
-        <span style="color:#000000;font-size:10.5pt;line-height:200%;font-weight:normal;font-family:Arial;text-align:left;">Texas Tech University</span></b>
-        <span style='color:#000000;font-size:10.5pt;line-height:200%;font-weight:normal;font-family:Arial;text-align:left;"'>, Lubbock, TX – December 2013</span><br>   
+    <p class = "GenText"><b>Bachelor of Business Administration,</b>Management Information Systems (MIS)</br>
+		Texas Tech University, Lubbock, TX – December 2013</br>   
     </p>
 
-    <h6 style="color:#C00000;font-size:20px;font-weight:bold;font-family:Arial;text-align:left;">LINKS</h5>
+    <p class = "SectionHdr">LINKS</p>
     <p><a href="https://www.linkedin.com/in/alexfrye/"><img src="pictures.fld/linkedinbutton.png" alt="linkedinbutton" style="float: left; width: 8%; margin-right: 1%; margin-bottom: 0.5em;" width="" height=""></a></p>
     <p><a href="mailto:alex.frye777@gmail.com"><img src="pictures.fld/mail.png" alt="mail"  style="float: left; width: 10%; margin-right: 1%; margin-bottom: 0.5em;" width="" height=""></a></p>
     <p style="clear: both;"/>
