--- a/HW7_FisherFrye/HW7_P5Vis.html
+++ b/HW7_FisherFrye/HW7_P5Vis.html
@@ -4,8 +4,8 @@
 <head>
 <meta charset="UTF-8">
 <script src = "libraries/p5.min.js"> </script>
-<script src = "P5Vis\HW7_Vis_SwirlHdr.js"> </script>
-<script src = "P5Vis\HypnoSwirl.js"> </script>
+<script src = "P5Vis\HW7_Vis_SwirlHdr.js?v=10222017" > </script>
+<script src = "P5Vis\HypnoSwirl.js?v=10222017"> </script>
 <title> P5 Visualization for HW 7 </title>
 <style> body{padding:0; margin:0; width:  100%; height: 100%;} </style>
 </head>
