Updated index.html theory template and main.css. Added images to images folder.

--- a/HW7_FisherFrye/templated-theory/index.html
+++ b/HW7_FisherFrye/templated-theory/index.html
@@ -19,8 +19,8 @@
 					<a href="index.html" class="logo">Theory</a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
-						<a href="generic.html">Generic</a>
-						<a href="elements.html">Elements</a>
+						<a href="HW7_P5Vis.html">P5 Swirl</a>
+						<a href="">Coming Soon</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
@@ -28,8 +28,8 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h1>Welcome to Theory</h1>
-				<p>A free responsive HTML5 website template by TEMPLATED.</p>
+				<h1>Welcome to Our Project Portfolio</h1>
+				<p>An online project portfolio for the SMU MSDS 6391 Visualization II course. Created by Alex Frye and Alexandra Fisher using a free responsive HTML5 website template by TEMPLATED.</p>
 			</section>
 
 		<!-- One -->
@@ -71,37 +71,23 @@
 			<section id="two" class="wrapper style1 special">
 				<div class="inner">
 					<header>
-						<h2>Ipsum Feugiat</h2>
-						<p>Semper suscipit posuere apede</p>
+						<h2>Meet the Creators</h2>
+						<p>Alex Frye and Alexandra Fisher are members of Southern Methodist University's Master of Science in Data Science (MSDS) program.</p>
 					</header>
 					<div class="flex flex-4">
 						<div class="box person">
 							<div class="image round">
-								<img src="images/pic03.jpg" alt="Person 1" />
+								<img src="images/frye.jpg" alt="Person 1" />
 							</div>
-							<h3>Magna</h3>
-							<p>Cipdum dolor</p>
+							<h3>Alex Frye</h3>
+							<p>Database Developer, Business Solutions Analyst, Data Scientist</p>
 						</div>
 						<div class="box person">
 							<div class="image round">
-								<img src="images/pic04.jpg" alt="Person 2" />
+								<img src="images/fisher.jpg" alt="Person 2" />
 							</div>
-							<h3>Ipsum</h3>
-							<p>Vestibulum comm</p>
-						</div>
-						<div class="box person">
-							<div class="image round">
-								<img src="images/pic05.jpg" alt="Person 3" />
-							</div>
-							<h3>Tempus</h3>
-							<p>Fusce pellentes</p>
-						</div>
-						<div class="box person">
-							<div class="image round">
-								<img src="images/pic06.jpg" alt="Person 4" />
-							</div>
-							<h3>Dolore</h3>
-							<p>Praesent placer</p>
+							<h3>Alexandra Fisher</h3>
+							<p>SaaS Sales & Marketing Professional, Data Scientist</p>
 						</div>
 					</div>
 				</div>
@@ -151,11 +137,8 @@
 							&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
 						</div>
 						<ul class="icons">
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
-							<li><a href="#" class="icon fa-pinterest-p"><span class="label">Pinterest</span></a></li>
-							<li><a href="#" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
+							<li><a href="https://github.com/amfrye777/MSDS6391_VISII_Projects" class="icon fa-github"><span class=label">GitHub</span></a></li>
 						</ul>
 					</div>
 				</div>
