index.html is now the updated introduction page, with all links updated; all html pages updated with assets/resume.css path; folders reorganized for submission

--- a/HW7_FisherFrye/index.html
+++ b/HW7_FisherFrye/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">Theory</a>
+					<a href="index.html" class="logo">Portfolio</a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
 						<a href="HW7_P5Vis.html">P5 Swirl</a>
@@ -29,7 +29,9 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h1>Welcome to Our Project Portfolio</h1>
-				<p>An online project portfolio for the SMU MSDS 6391 Visualization II course. Created by Alex Frye and Alexandra Fisher using a free responsive HTML5 website template by TEMPLATED.</p>
+				<p>An online project portfolio for the SMU MSDS 6391 Visualization II course. 
+				Created by Alex Frye and Alexandra Fisher using a free responsive HTML5 website template 
+				by <a href="https://templated.co/theory">TEMPLATED</a>.</p>
 			</section>
 
 		<!-- One -->
@@ -38,29 +40,29 @@
 					<div class="flex flex-3">
 						<article>
 							<header>
-								<h3>Magna tempus sed amet<br /> aliquam veroeros</h3>
+								<h3>GitHub<br />Repository</h3>
 							</header>
-							<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu.</p>
+							<p>Visit our GitHub repository to see more visualization projects.</p>
 							<footer>
-								<a href="#" class="button special">More</a>
+								<a href="https://github.com/amfrye777/MSDS6391_VISII_Projects" class="button special">More</a>
 							</footer>
 						</article>
 						<article>
 							<header>
-								<h3>Interdum lorem pulvinar<br /> adipiscing vitae</h3>
+								<h3>Alex Frye<br />Resume</h3>
 							</header>
-							<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu.</p>
+							<p>Learn more about creator Alex Frye by viewing his professional resume.</p>
 							<footer>
-								<a href="#" class="button special">More</a>
+								<a href="HW7_Resume2.html" class="button special">More</a>
 							</footer>
 						</article>
 						<article>
 							<header>
-								<h3>Libero purus magna sapien<br /> sed ullamcorper</h3>
+								<h3>Alexandra Fisher<br />Resume</h3>
 							</header>
-							<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu.</p>
+							<p>Learn more about creator Alexandra Fisher by viewing her professional resume.</p>
 							<footer>
-								<a href="#" class="button special">More</a>
+								<a href="HW7_Resume1.html" class="button special">More</a>
 							</footer>
 						</article>
 					</div>
@@ -97,30 +99,32 @@
 			<section id="three" class="wrapper special">
 				<div class="inner">
 					<header class="align-center">
-						<h2>Nunc Dignissim</h2>
-						<p>Aliquam erat volutpat nam dui </p>
+						<h2>Projects</h2>
+						<p>Take a look at some of our most recent visualization projects and visit our GitHub repository for the full portfolio.</p>
 					</header>
 					<div class="flex flex-2">
 						<article>
 							<div class="image fit">
-								<img src="images/pic01.jpg" alt="Pic 01" />
+								<a href="HW7_P5Vis.html"><img src="images/swirl.png" alt="Pic 01" /></a>
 							</div>
 							<header>
-								<h3>Praesent placerat magna</h3>
+								<h3>Hypnotic Swirl in P5</h3>
 							</header>
-							<p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor lorem ipsum.</p>
+							<p>The P5 Swirl project is a dynamic interactive visualization developed using the P5 library. 
+							The interactive swirl was originally created using openFrameworks.
+						    </p>
 							<footer>
-								<a href="#" class="button special">More</a>
+								<a href="HW7_P5Vis.html" class="button special">More</a>
 							</footer>
 						</article>
 						<article>
 							<div class="image fit">
-								<img src="images/pic02.jpg" alt="Pic 02" />
+								<img src="images/underconstruction.jpg" alt="Pic 02" />
 							</div>
 							<header>
-								<h3>Fusce pellentesque tempus</h3>
+								<h3>Under Construction - Coming Soon!</h3>
 							</header>
-							<p>Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euismod vel, velit. Pellentesque egestas sem. Suspendisse commodo ullamcorper magna non comodo sodales tempus.</p>
+							<p>Our next project is in the works and currently under construction. Stay tuned for more updates.</p>
 							<footer>
 								<a href="#" class="button special">More</a>
 							</footer>
@@ -137,7 +141,6 @@
 							&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
 						</div>
 						<ul class="icons">
-							<li><a href="#" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
 							<li><a href="https://github.com/amfrye777/MSDS6391_VISII_Projects" class="icon fa-github"><span class=label">GitHub</span></a></li>
 						</ul>
 					</div>
