--- a/HW7_FisherFrye/HW7_Resume2.html
+++ b/HW7_FisherFrye/HW7_Resume2.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="assets/Resume.css">
+<link rel="stylesheet" href="assets/Resume.css?v=10222017">
 <title> Alex Frye's Resume </title>
 </head>
 
