Linked face images to linkedin in index.html. Changed image size for under construction image.

--- a/HW7_FisherFrye/index.html
+++ b/HW7_FisherFrye/index.html
@@ -79,14 +79,14 @@
 					<div class="flex flex-4">
 						<div class="box person">
 							<div class="image round">
-								<img src="images/frye.jpg" alt="Person 1" />
+								<a href="http://www.linkedin.com/in/alexfrye"><img src="images/frye.jpg" alt="Person 1" /></a>
 							</div>
 							<h3>Alex Frye</h3>
 							<p>Database Developer, Business Solutions Analyst, Data Scientist</p>
 						</div>
 						<div class="box person">
 							<div class="image round">
-								<img src="images/fisher.jpg" alt="Person 2" />
+								<a href="http://www.linkedin.com/in/alexandranfisher"><img src="images/fisher.jpg" alt="Person 2" /></a>
 							</div>
 							<h3>Alexandra Fisher</h3>
 							<p>SaaS Sales & Marketing Professional, Data Scientist</p>
