updated height and width of project images

--- a/HW7_FisherFrye/index.html
+++ b/HW7_FisherFrye/index.html
@@ -105,7 +105,7 @@
 					<div class="flex flex-2">
 						<article>
 							<div class="image fit">
-								<a href="HW7_P5Vis.html"><img src="images/swirl.png" alt="Pic 01" /></a>
+								<a href="HW7_P5Vis.html"><img src="images/swirl.png" alt="Pic 01" height="200" width="575" /></a>
 							</div>
 							<header>
 								<h3>Hypnotic Swirl in P5</h3>
@@ -119,7 +119,7 @@
 						</article>
 						<article>
 							<div class="image fit">
-								<img src="images/underconstruction.jpg" alt="Pic 02" />
+								<img src="images/underconstruction.jpg" alt="Pic 02" height="200" width="575"/>
 							</div>
 							<header>
 								<h3>Under Construction - Coming Soon!</h3>
