--- a/HW8_FisherFrye/HypnoSwirl.html
+++ b/HW8_FisherFrye/HypnoSwirl.html
@@ -4,8 +4,8 @@
 <head>
 <meta charset="UTF-8">
 <script src = "libraries/p5.min.js"> </script>
-<script src = "P5Vis\HW7_Vis_SwirlHdr.js?v=10222017" > </script>
-<script src = "P5Vis\HypnoSwirl.js?v=10222017"> </script>
+<script src = "Vis\HW7_Vis_SwirlHdr.js?v=10222017" > </script>
+<script src = "Vis\HypnoSwirl.js?v=10222017"> </script>
 <title> P5 Visualization for HW 7 </title>
 <link rel="stylesheet" href="assets/css/main.css?v=10222017" />
 <style> body{padding:0; margin:0; width:  100%; height: 100%;} </style>
