--- a/HW8_FisherFrye/AlexFryeResume.html
+++ b/HW8_FisherFrye/AlexFryeResume.html
@@ -16,7 +16,7 @@
 <!-- Header -->
     <header id="header">
         <div class="inner">
-            <a href="index.html" class="logo">Theory</a>
+            <a href="index.html" class="logo">Portfolio</a>
             <nav id="nav">
                     <a href="index.html">Home</a>
                     <a href="HypnoSwirl.html">P5 Swirl</a>
