--- a/HW8_FisherFrye/HypnoSwirl.html
+++ b/HW8_FisherFrye/HypnoSwirl.html
@@ -11,8 +11,34 @@
 <style> body{padding:0; margin:0; width:  100%; height: 100%;} </style>
 </head>
 
-<body onresize="reSize()">
+<body class = "subpage" onresize="reSize()">
+    <!-- Header -->
+    <header id="header">
+            <div class="inner">
+                <a href="index.html" class="logo">Portfolio</a>
+                <nav id="nav">
+                        <a href="index.html">Home</a>
+                        <a href="HypnoSwirl.html">P5 Swirl</a>
+                        <a href="">Coming Soon</a>
+                </nav>
+                <a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+            </div>
+        </header>
     <div id="swirlCanvas" onmousemove="mouseMoved(event)"></div>
+
+    <!-- Footer -->
+    <footer id="footer">
+            <div class="inner">
+                <div class="flex">
+                    <div class="copyright">
+                        &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
+                    </div>
+                    <ul class="icons">
+                        <li><a href="https://github.com/amfrye777/MSDS6391_VISII_Projects" class="icon fa-github"><span class="label">GitHub</span></a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
 </body>
 
 </html>
