used local jquery path to fix s2 restrictions

--- a/HW9_FisherFrye/AlexFryeResume.html
+++ b/HW9_FisherFrye/AlexFryeResume.html
@@ -103,8 +103,8 @@
     </footer>
     
 <!-- Scripts -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src = "Vis\Timeline.js?v=10302017" > </script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src = "Vis\Timeline.js?v=11042017" > </script>
     <script src="assets/js/skel.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
