--- a/HW9_FisherFrye/AlexandraFisherResume.html
+++ b/HW9_FisherFrye/AlexandraFisherResume.html
@@ -5,9 +5,7 @@
     <title>Alexandra Fisher's Resume</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="assets/css/main.css?v=10292017" />
-    <script src = "Vis\Timeline2.js?v=10302017" > </script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="assets/css/main.css?v=10302017" />
 </head>
 
 
@@ -44,11 +42,15 @@
             
             <h2 id="content">WORK EXPERIENCE</h2>
 
-            <canvas id="timelineVis" ><!-- width="600" height="600" style="border: 2px solid #222222;" -->
-                HTML5 Canvas not supported
-            </canvas>
+            <!-- <canvas id="timelineVis" ><!-- width="600" height="600" style="border: 2px solid #222222;" -->
+                <!-- HTML5 Canvas not supported -->
+            <!-- </canvas> -->
 
-            <div id = "Work ExperienceJS"></div>
+            <!-- <div id = "Work ExperienceJS"></div> -->
+
+            <div id="WorkExperienceD3">
+            </div>
+
 
             <hr>
 
@@ -105,6 +107,8 @@
     <script src="assets/js/skel.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src = "Vis\Timeline2.js?v=11152017" > </script>
 </body>
 
 </html>
