added footer citation

--- a/HW9_FisherFrye/AlexandraFisherResume.html
+++ b/HW9_FisherFrye/AlexandraFisherResume.html
@@ -92,6 +92,7 @@
             <div class="flex">
                 <div class="copyright">
                     &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
+                    Original D3 Block Tree Design:<a href="https://bl.ocks.org/mbostock/1093025">Mike Bostock</a>.
                 </div>
                 <ul class="icons">
                     <li><a href="https://github.com/amfrye777/MSDS6391_VISII_Projects" class="icon fa-github"><span class="label">GitHub</span></a></li>
