Alex Practice - progress bars example - not working
Alex Practice 2 - different type of pie chart that varies individual arc segments by outerRadius, startAngle, endAngle - http://bl.ocks.org/bbest/2de0e25d4840c68f2db1

--- a/HW10_FisherFrye/AlexandraFisherResume.html
+++ b/HW10_FisherFrye/AlexandraFisherResume.html
@@ -85,6 +85,15 @@
             <div style="clear:both;"></div>
 
             <div id = "DSTech">
+            
+           <div id = "TechSkillsD3_2">   
+
+            </div>
+
+                <!--This div needed to fix "float" styling from D3-->
+            <div style="clear:both;"></div>
+
+            <div id = "DSTech">
                     
             </div>
         </div>
@@ -114,6 +123,7 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src = "Vis\Timeline2.js?v=11152017" > </script>
     <script src = "Vis/TechSkills.js" > </script>
+    <script src = "Vis/TechSkills_2.js" > </script>
 </body>
 
 </html>
