Second TechSkills Vis push

--- a/HW10_FisherFrye/AlexFryeResume.html
+++ b/HW10_FisherFrye/AlexFryeResume.html
@@ -112,7 +112,7 @@
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src = "Vis\TechSkills.js?v=11262017.D2" > </script>
+    <script src = "Vis\TechSkills.js?v=11292017v1" > </script>
 </body>
 
 </html>
