--- a/HW10_FisherFrye/AlexandraFisherResume.html
+++ b/HW10_FisherFrye/AlexandraFisherResume.html
@@ -95,6 +95,7 @@
                 <div class="copyright">
                     &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
                     Original D3 Block Tree Design:<a href="https://bl.ocks.org/mbostock/1093025">Mike Bostock</a>.
+                    Original D3 Progress Bar Design:<a href="http://www.competa.com/blog/animated-progress-bars-with-d3-js/">competa</a>.
                 </div>
                 <ul class="icons">
                     <li><a href="https://github.com/amfrye777/MSDS6391_VISII_Projects" class="icon fa-github"><span class="label">GitHub</span></a></li>
