--- a/HW11_FisherFrye/AlexandraFisherResume.html
+++ b/HW11_FisherFrye/AlexandraFisherResume.html
@@ -5,7 +5,7 @@
     <title>Alexandra Fisher's Resume</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="assets/css/main.css?v=11282017.02" />
+    <link rel="stylesheet" href="assets/css/main.css?v=12062017V02" />
 </head>
 
 
@@ -48,9 +48,10 @@
 
             <!-- <div id = "Work ExperienceJS"></div> -->
 
-            <div id="WorkExperienceD3">
-            </div>
+            <!-- <div id="WorkExperienceD3"></div> -->
 
+            <div id = "SankeySkillsD3">   
+            </div>
 
             <hr>
 
@@ -77,12 +78,14 @@
                     
             </div>
 
-            <div id = "TechSkillsD3" class = "progress-bars">   
+            <!-- <div id = "TechSkillsD3" class = "progress-bars">   
                <h2 id="content">Technical Skills</h2>
-            </div>
+            </div> -->
 
                 <!--This div needed to fix "float" styling from D3-->
-            <div style="clear:both;"></div>
+            <!-- <div style="clear:both;"></div> -->
+            
+
 
             <div id = "DSTech">                    
             </div>
@@ -111,10 +114,13 @@
     <script src="assets/js/skel.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src = "Vis\Timeline2.js?v=11152017" > </script>
+    <script src="https://d3js.org/d3.v3.js?v=12062017v1"></script>
+    <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
+    <!-- <script src = "Vis\Timeline2.js?v=11152017" > </script> -->
     <!--<script src = "Vis/TechSkills.js" > </script>-->
-    <script src = "Vis/TechSkills2.js?v=11292017v1" > </script>
+    <!-- <script src = "Vis/TechSkills2.js?v=11292017v1" > </script> -->
+    <script src = "Libraries/Sankey.js?v=12062017v2" > </script>
+    <script src = "Vis/SankeyResumeSkills.js?v=12062017v2" > </script>
 </body>
 
 </html>
