--- a/HW11_FisherFrye/index.html
+++ b/HW11_FisherFrye/index.html
@@ -62,7 +62,7 @@
 							</header>
 							<p>Learn more about creator Alexandra Fisher by viewing her professional resume.</p>
 							<footer>
-								<a href="AlexandraFisherResume.html?JobHistory=AFisherJobHistory&TechSkills=AFisherTechSkills" class="button special">More</a>
+								<a href="AlexandraFisherResume.html?JobHistory=AFisherJobHistory&TechSkills=AFisherTechSkills&SankeySkills=AFisherSankeySkills" class="button special">More</a>
 							</footer>
 						</article>
 					</div>
